<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, PsyRadioActivity!</string>
    <string name="app_name">PsyRadio</string>
    <string name="live_show_not_start">Music is not playing :)</string>
    <string name="live_show_waiting_hint">Connection error. Check Internet connection.</string>
    <string-array
	    name="live_show_notification_labels">
	    <item>Broadcasting</item>
	    <item>Connection</item>
	    <item>Waiting</item>
	  </string-array>
	  <string-array
	    name="live_show_status_labels">
	    <item>Stopped</item>
	    <item>Connecting</item>
	    <item>Waiting</item>
	    <item>Broadcasting</item>
	    <item>Stopping</item>
	  </string-array>
	  
	  <string name="about_label">About</string>
	  <string name="settings_label">Streaming quality</string>
	  <string name="q64k">64K</string>
	  <string name="q128k">128K</string>
	  <string name="q256k">256K</string>
	  <string name="about_text">
<![CDATA[Psychic Radio Station (http://psyradio.com.ua)\n
Psychedelic Online Station.\n\n
Application creator:\n
CatWare (http://catware.co)]]>
	  </string>
</resources>