<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:id="@+id/settings_button"
      android:icon="@drawable/settings_menu_button"
      android:title="@string/settings_label">
    <menu xmlns:android="http://schemas.android.com/apk/res/android"> 
	    <group android:checkableBehavior="single">
	        <item android:id="@+id/q64k"
	              android:title="@string/q64k" />
	        <item android:id="@+id/q128k"
	              android:title="@string/q128k" />
	        <item android:id="@+id/q256k"
	              android:title="@string/q256k" />
	    </group>
    </menu>
   </item>
   <item android:id="@+id/about_button"
      android:icon="@drawable/info_menu_button"
      android:title="@string/about_label" />
</menu>